// Copyright 2018 The Skycfg Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto2";

package skycfg.test_proto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/stripe/skycfg/internal/testdata/test_proto/test_proto_v2.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/stripe/skycfg/internal/testdata/test_proto_gogo";

message MessageGogo {
  option (gogoproto.sizer) = false;
  option (gogoproto.marshaler) = false;
  option (gogoproto.unmarshaler) = false;

  optional int32  f_int32   = 1;
  optional int64  f_int64   = 2;
  optional uint32 f_uint32  = 3;
  optional uint64 f_uint64  = 4;
  optional float  f_float32 = 5;
  optional double f_float64 = 6;
  optional string f_string  = 7 [default="default_str"];;
  optional bool   f_bool    = 8;

  optional MessageV2 f_submsg = 9 [
    (gogoproto.nullable) = false
  ];

  repeated string        r_string = 10;
  repeated MessageV2     r_submsg = 11 [
    (gogoproto.nullable) = false
  ];

  map<string, string>    map_string = 12;
  map<string, MessageV2> map_submsg = 13;

  message NestedMessage {
    optional string f_string = 1;

    message DoubleNestedMessage {
      optional string f_string = 1;
    }
  }
  optional NestedMessage f_nested_submsg = 16;

  enum NestedEnum {
    NESTED_ENUM_A = 0;
    NESTED_ENUM_B = 1;
  }
  optional ToplevelEnumV2 f_toplevel_enum = 14;
  optional NestedEnum f_nested_enum = 15;

  oneof f_oneof {
    string f_oneof_a = 17;
    string f_oneof_b = 18;
  }

  optional bytes f_bytes = 19;

  optional google.protobuf.Duration f_duration = 20 [
    (gogoproto.stdduration) = true,
    (gogoproto.nullable) = false
  ];

  // NEXT: 21
}
